bare bones draft, must fix delete/truncate, css redesign

--- a/public/assets/css/shop_style.css
+++ b/public/assets/css/shop_style.css
@@ -3,18 +3,41 @@
 }
 
 body{
-	background: rgb (120,24,12); /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(0deg, rgb (120,24,12), rgb(234,228,225)); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(0deg, rgb (120,24,12), rgb(234,228,225)); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(0deg, rgb (120,24,12), rgb(234,228,225)); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(0deg, rgb (120,24,12), rgb(234,228,225)); /* Standard syntax (must be last) */
+	background: rgba(217,244,241,1); /* For browsers that do not support gradients */
+	background: -moz-linear-gradient(top, rgba(217,244,241,1) 0%, rgba(217,244,241,1) 8%, rgba(217,244,241,1) 29%, rgba(146,221,205,1) 71%, rgba(146,221,205,1) 84%, rgba(146,221,205,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(217,244,241,1)), color-stop(8%, rgba(217,244,241,1)), color-stop(29%, rgba(217,244,241,1)), color-stop(71%, rgba(146,221,205,1)), color-stop(84%, rgba(146,221,205,1)), color-stop(100%, rgba(146,221,205,1)));
+	background: -webkit-linear-gradient(top, rgba(217,244,241,1) 0%, rgba(217,244,241,1) 8%, rgba(217,244,241,1) 29%, rgba(146,221,205,1) 71%, rgba(146,221,205,1) 84%, rgba(146,221,205,1) 100%);
+	background: -o-linear-gradient(top, rgba(217,244,241,1) 0%, rgba(217,244,241,1) 8%, rgba(217,244,241,1) 29%, rgba(146,221,205,1) 71%, rgba(146,221,205,1) 84%, rgba(146,221,205,1) 100%);
+	background: -ms-linear-gradient(top, rgba(217,244,241,1) 0%, rgba(217,244,241,1) 8%, rgba(217,244,241,1) 29%, rgba(146,221,205,1) 71%, rgba(146,221,205,1) 84%, rgba(146,221,205,1) 100%);
+	background: linear-gradient(to bottom, rgba(217,244,241,1) 0%, rgba(217,244,241,1) 8%, rgba(217,244,241,1) 29%, rgba(146,221,205,1) 71%, rgba(146,221,205,1) 84%, rgba(146,221,205,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d9f4f1', endColorstr='#92ddcd', GradientType=0 );
 }
 
-.jumbotron{
-	color:#0033cc;
-	border: rgb(120, 24, 12) 4px;
-/*	max-height: 300px;*/
+.card{
 	
+	border: #368e83 4px;
+	font-size: 16px;
+	background-color:#48baac;
+	max-width:100%;
+}
+.card-header{
+	font-size:36px;
+}
+
+.table-fixed thead {
+  width: 97%;
+}
+.table-fixed tbody {
+  height: 230px;
+  overflow-y: auto;
+  width: 100%;
+}
+.table-fixed thead, .table-fixed tbody, .table-fixed tr, .table-fixed td, .table-fixed th {
+  display: block;
+}
+.table-fixed tbody td, .table-fixed thead > tr> th {
+  float: left;
+  border-bottom-width: 0;
 }
 
 img{
@@ -22,6 +45,9 @@ img{
 	max-height:300px;
 }
 
+.side-section{
+	float:right;
+}
 #mainText{
 	size:36px;
 	font-color:white !important;
@@ -125,4 +151,44 @@ li{
 	position:absolute;
 
 
+}
+/*------------Dropdown stdItems------------*/
+.dropbtn {
+    background-color: #48baac;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #d9f4f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #bcd3d1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #368e83;
 }
